[gd_scene load_steps=4 format=3 uid="uid://dps8a0g862a0c"]

[ext_resource type="Script" path="res://Scenes/cluster_shell.gd" id="1_abcde"]
[ext_resource type="Texture2D" uid="uid://b5leus2rgc4kb" path="res://tank_bullet3.png" id="2_fghij"]
[ext_resource type="PackedScene" uid="uid://fgwbejfhbulb" path="res://Scenes/bullet.tscn" id="3_klmno"]

[node name="ClusterShell" type="RigidBody2D"]
gravity_scale = 0.0
script = ExtResource("1_abcde")
submunition_scene = ExtResource("3_klmno")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(2, 2)
texture = ExtResource("2_fghij")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
# This shape is not used for collision but is often required for RigidBody2D.
# The script disables collision anyway.
disabled = true

[node name="SplitTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="timeout" from="SplitTimer" to="." method="_on_split_timer_timeout"]
